# niddy-bot

./: .gitignore  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
data/: PB NDIS Support Catalogue 2023-24  - Current Support Items.csv
src/: app.py  appConfig.toml  chatbot.ipynb  helpers.py  langsmith_test.ipynb  modules.ipynb  ndis.ipynb  retrieve_helper.ipynb  tools.ipynb  xlsfiles.ipynb
src/modules/: chatbot.py  chathistory.py  helpers.py  layout.py  loaders.py  memory.py  prompts.py  retriever.py  sidebar.py  tools.ipynb
src/modules/retrievers/: faiss.py
src/notebooks/: Agents,_Llama_Index_and_NebulaGraph.ipynb  NebulaGraph - Semantic Search and KG.ipynb  Neo4j - Semantic Search and KG.ipynb  Plan and Execute Agent.ipynb  niddy_llamaindex.ipynb
src/tests/: notes.md  test_chatbot.py  test_retriever.py
